--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,16 @@
-.tmp
+!.git/
 .cache-loader
-.nyc_ouput
-.versionbot
-coverage
-dist
-dump.rdb
-node_modules
-Dockerfile
-postgres_data
-**/node_modules
-**/package*.json.*
-.libs/**/package*.json
 .libs/**/*.tgz*
 .libs/**/lib
+.libs/**/package*.json
+.nyc_ouput
+.tmp
+.versionbot
+**/node_modules
+**/package*.json.*
+coverage
+dist
+Dockerfile
+dump.rdb
+node_modules
+postgres_data
