--- a/apps/haproxy/haproxy.cfg
+++ b/apps/haproxy/haproxy.cfg
@@ -1,115 +1,193 @@
 global
-  tune.ssl.default-dh-param 1024
+		tune.ssl.default-dh-param 1024
+		# https://github.com/haproxytech/haproxy-lua-cors
+		lua-load /usr/local/etc/haproxy/cors.lua
+		# https://www.haproxy.com/blog/introduction-to-haproxy-logging/
+		log stdout format raw daemon "${LOGLEVEL}"
+		log stderr format raw daemon "${LOGLEVEL}"
+		ssl-default-bind-options ssl-min-ver TLSv1.3
 
 defaults
-  timeout connect 5s
-  timeout client 180s
-  timeout server 180s
-  default-server init-addr last,libc,none
+		balance roundrobin
+		default-server init-addr last,libc,none
+		default-server inter 3s rise 2 fall 3
+		log global
+		mode http
+		option contstats
+		option dontlognull
+		option forwardfor
+		option httplog
+		timeout client 180s
+		timeout connect 5s
+		timeout server 180s
 
 resolvers docker-bridge-resolver
-  nameserver docker-resolver 127.0.0.11:53
-  hold valid 0ms
+		nameserver docker-resolver 127.0.0.11:53
+		hold valid 0ms
 
-frontend http_80_in
-  mode http
-  option forwardfor
-  bind *:80
-  http-request add-header X-Forwarded-Proto http
+http-errors jf-http-errors
+		errorfile 400 /etc/haproxy/errors/400.http
+		errorfile 401 /etc/haproxy/errors/401.http
+		errorfile 403 /etc/haproxy/errors/403.http
+		errorfile 404 /etc/haproxy/errors/404.http
+		errorfile 500 /etc/haproxy/errors/500.http
+		errorfile 502 /etc/haproxy/errors/502.http
+		errorfile 503 /etc/haproxy/errors/503.http
 
-acl host_ui_backend hdr_dom(host) -i jel.ly.fish.local livechat.ly.fish.local
-use_backend ui_backend if host_ui_backend
+userlist balena
+		user balena insecure-password "${BALENA_DEVICE_UUID}"
 
-acl host_api_backend hdr_dom(host) -i api.ly.fish.local
-use_backend api_backend if host_api_backend
+listen haproxy-stats
+		bind :::1936 v4v6 ssl crt "${CERT_CHAIN_PATH}"
+		stats auth "balena:${BALENA_DEVICE_UUID}"
+		stats enable
+		stats uri /metrics
 
-acl host_registry_backend hdr_dom(host) -i registry.ly.fish.local
-use_backend registry_backend if host_registry_backend
+listen postgres
+		mode tcp
+		bind :::5432 v4v6
+		server postgres postgres:5432 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 5432
 
-acl host_grafana_backend hdr_dom(host) -i grafana.ly.fish.local
-use_backend grafana_backend if host_grafana_backend
+listen redis
+		mode tcp
+		bind :::6379 v4v6
+		server redis redis:6379 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 6379
 
-acl host_prometheus_backend hdr_dom(host) -i prometheus.ly.fish.local
-use_backend prometheus_backend if host_prometheus_backend
 
-acl host_s3_backend hdr_dom(host) -i s3.ly.fish.local
-use_backend s3_backend if host_s3_backend
+frontend http
+		bind :::80 v4v6
+		errorfiles jf-http-errors
+		http-request capture req.hdr(Host) len 15
+		http-response lua.cors
+		# https://www.haproxy.com/blog/haproxy-log-customization/
+		log-format "%ci:%cp [%tr] %ft %b/%s %TR/%Tw/%Tc/%Tr/%Ta %ST %B %CC %CS %tsc %ac/%fc/%bc/%sc/%rc %sq/%bq %hr %hs %{+Q}r"
 
-frontend tcp_5432_in
-    mode tcp
-    bind *:5432
-    timeout client 0
-    default_backend postgres_backend
+		acl api_dead nbsrv(api-backend) lt 1
+		acl ui_dead nbsrv(ui-backend) lt 1
+		monitor-uri /health
+		monitor fail if api_dead ui_dead
 
-frontend tcp_6379_in
-    mode tcp
-    bind *:6379
-    timeout client 0
-    default_backend redis_backend
+		# requests to wifi-connect (Host: 192.168.42.1)
+		default_backend wifi-connect-backend
 
-frontend tcp_3000_in
-    mode tcp
-    bind *:3000
-    default_backend grafana_backend
+		acl host-ui-backend hdr_beg(host) -i "jel." "livechat."
+		# default public device URL(s) v1 always go to the Jellyfish UI
+		acl host-pdu-default hdr_beg(host) -i "${BALENA_DEVICE_UUID}"
+		# FIXME: balena-proxy should be adding X-Forwarded-For headers
+		http-request add-header X-Forwarded-Proto http if host-ui-backend
+		http-request add-header X-Forwarded-Proto https if host-pdu-default
+		use_backend ui-backend if host-ui-backend || host-pdu-default
 
-frontend tcp_9090_in
-    mode tcp
-    bind *:9090
-    default_backend prometheus_backend
+		acl host-ca-backend hdr_beg(host) -i "ca."
+		# only allow CRL requests unauthenticated, protect everything else
+		acl path-balena-ca-crl path -i -m beg /api/v1/cfssl/crl
+		acl balena-ca-auth http_auth(balena)
+		http-request auth realm balena-ca if host-ca-backend !balena-ca-auth !path-balena-ca-crl
+		use_backend ca-backend if host-ca-backend
 
-frontend tcp_43697_in
-    mode tcp
-    bind *:43697
-    default_backend s3_backend_43697
+		acl host-ocsp-backend hdr_beg(host) -i "ocsp."
+		use_backend ocsp-backend if host-ocsp-backend
 
-backend ui_backend
-    mode http
-    option forwardfor
-    balance roundrobin
-    server ui ui:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+		acl host-api-backend hdr_sub(host) -i "api."
+		acl path-api-metrics path -i -m beg /metrics
+		acl path-registry-token-auth path_beg -i /auth/v1/token
+		# path re-write rather than hardcode in open-balena-base|configure-balena.sh
+		http-request set-path /api/v2/registry if host-api-backend path-registry-token-auth
+		use_backend api-backend if host-api-backend !path-api-metrics
+		use_backend metrics-api-backend if host-api-backend path-api-metrics
 
-backend redis_backend
-    mode tcp
-    timeout server 0
-    server redis redis:6379 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 6379
+		acl host-registry-backend hdr_sub(host) -i "registry."
+		use_backend registry-backend if host-registry-backend
 
-backend postgres_backend
-    mode tcp
-    timeout server 0
-    server postgres postgres:5432 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 5432
+		acl host-grafana-backend hdr_sub(host) -i "grafana."
+		use_backend grafana-backend if host-grafana-backend
 
-backend api_backend
-    mode http
-    option forwardfor
-    balance roundrobin
-    server api api:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+		acl host-prometheus-backend hdr_sub(host) -i "prometheus."
+		use_backend prometheus-backend if host-prometheus-backend
 
-backend registry_backend
-    mode http
-    option forwardfor
-    balance roundrobin
-    server registry registry:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+		acl host-s3-backend hdr_beg(host) -i "s3."
+		use_backend s3-backend if host-s3-backend
 
-backend s3_backend
-    mode http
-    option forwardfor
-    balance roundrobin
-    server s3 s3:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+		acl host-minio-backend hdr_beg(host) -i "minio."
+		use_backend minio-backend if host-minio-backend
 
-backend s3_backend_43697
-    mode http
-    option forwardfor
-    balance roundrobin
-    server s3_43697 s3:43697 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 43697
+frontend https
+		bind :::443 v4v6 ssl crt "${CERT_CHAIN_PATH}" alpn h2,http/1.1
+		default_backend ui-backend
+		errorfiles jf-http-errors
+		http-request add-header X-Forwarded-Proto https
+		http-request add-header X-Forwarded-Port 443
+		http-request capture req.hdr(Host) len 15
+		http-response lua.cors
+		log-format "%ci:%cp [%tr] %ft %b/%s %TR/%Tw/%Tc/%Tr/%Ta %ST %B %CC %CS %tsc %ac/%fc/%bc/%sc/%rc %sq/%bq %hr %hs %{+Q}r"
 
-backend grafana_backend
-    mode http
-    option forwardfor
-    balance roundrobin
-    server grafana grafana:3000 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 3000
+		acl host-ca-backend hdr_beg(host) -i "ca."
+		# only allow CRL requests unauthenticated, protect everything else
+		acl path-balena-ca-crl path -i -m beg /api/v1/cfssl/crl
+		acl balena-ca-auth http_auth(balena)
+		http-request auth realm balena-ca if host-ca-backend !balena-ca-auth !path-balena-ca-crl
+		use_backend ca-backend if host-ca-backend
 
-backend prometheus_backend
-    mode http
-    option forwardfor
-    balance roundrobin
-    server prometheus prometheus:9090 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9090
+		acl host-ocsp-backend hdr_beg(host) -i "ocsp."
+		use_backend ocsp-backend if host-ocsp-backend
+
+		acl host-api-backend hdr_sub(host) -i "api."
+		acl path-api-metrics path -i -m beg /metrics
+		acl path-registry-token-auth path_beg -i /auth/v1/token
+		# path re-write rather than hardcode in open-balena-base|configure-balena.sh
+		http-request set-path /api/v2/registry if host-api-backend path-registry-token-auth
+		use_backend api-backend if host-api-backend !path-api-metrics
+		use_backend metrics-api-backend if host-api-backend path-api-metrics
+
+		acl host-registry-backend hdr_sub(host) -i "registry."
+		use_backend registry-backend if host-registry-backend
+
+		acl host-grafana-backend hdr_sub(host) -i "grafana."
+		use_backend grafana-backend if host-grafana-backend
+
+		acl host-prometheus-backend hdr_sub(host) -i "prometheus."
+		use_backend prometheus-backend if host-prometheus-backend
+
+		acl host-s3-backend hdr_beg(host) -i "s3."
+		use_backend s3-backend if host-s3-backend
+
+		acl host-minio-backend hdr_beg(host) -i "minio."
+		use_backend minio-backend if host-minio-backend
+
+backend api-backend
+		server api api:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+
+backend metrics-api-backend
+		server api api:9000 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9000
+
+# (TBC) wire up using different hostname or metrics path
+backend metrics-socket-backend
+		server api api:9001 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9001
+
+backend ui-backend
+		server ui ui:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+
+backend registry-backend
+		server registry registry:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+
+backend s3-backend
+		server s3 s3:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
+
+# https://github.com/minio/console
+backend minio-backend
+		server s3-console s3:43697 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 43697
+
+backend grafana-backend
+		server grafana grafana:3000 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 3000
+
+backend prometheus-backend
+		server prometheus prometheus:9090 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9090
+
+backend ca-backend
+		server cfssl-ca balena-ca:8888 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 8888
+
+backend ocsp-backend
+		server cfssl-ocsp balena-ca:8889 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 8889
+
+backend wifi-connect-backend
+		server wifi-connect 192.168.42.1:1337 check port 1337
