--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "lint": "eslint --ext .js,.jsx scripts test && npm run lint:check && npm run lint:deps &&  npm run lint:server && npm run lint:ui",
-    "lint:check": "./scripts/lint/check-filenames.sh && shellcheck scripts/*.sh scripts/*/*.sh deploy-templates/*.sh",
+    "lint:check": "./scripts/lint/check-filenames.sh && shellcheck scripts/*.sh scripts/*/*.sh",
     "lint:deps": "deplint && depcheck --ignore-bin-package --ignores=@balena/jellyfish-*,shellcheck,autumndb",
     "lint:catch": "catch-uncommitted --skip-node-versionbot-changes --exclude=VERSION,.versionbot/",
     "lint:server": "(cd apps/server && npm run lint)",
@@ -114,7 +114,6 @@
     "playwright": "^1.21.1",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
-    "shellcheck": "^1.1.0",
     "simple-git-hooks": "^2.7.0",
     "uuid": "^8.3.2"
   },
@@ -123,5 +122,57 @@
   },
   "versionist": {
     "publishedAt": "2022-05-07T11:07:39.264Z"
+  },
+  "balena": {
+    "environment": [
+      {
+          "name": "LOGLEVEL",
+          "value": "info"
+      },
+      {
+          "name": "NODE_ENV",
+          "value": "development"
+      },
+      {
+          "name": "NODE_ENV",
+          "serviceName": "jellyfish-tests",
+          "value": "test"
+      }
+    ],
+    "secrets": [
+      {
+          "serviceName": "jellyfish-tests",
+          "value": "aws_access_key_id"
+      },
+      {
+          "serviceName": "jellyfish-tests",
+          "value": "aws_s3_bucket_name"
+      },
+      {
+          "serviceName": "jellyfish-tests",
+          "value": "aws_secret_access_key"
+      },
+      {
+          "value": "integration_discourse_token"
+      },
+      {
+          "value": "integration_discourse_username"
+      },
+      {
+          "value": "integration_front_token"
+      },
+      {
+          "value": "integration_github_app_id"
+      },
+      {
+          "value": "integration_github_private_key"
+      },
+      {
+          "value": "integration_github_token"
+      },
+      {
+          "value": "integration_intercom_token"
+      }
+    ]
   }
 }
