--- a/.gitignore
+++ b/.gitignore
@@ -106,19 +106,6 @@ docs/typedoc/*
 # Front app environment configuration files
 apps/ui/env-config.js
 
-# Decrypted secret files
-.balena/secrets/integration_balena_api_private_key
-.balena/secrets/integration_balena_api_public_key_production
-.balena/secrets/integration_github_app_id
-.balena/secrets/integration_github_private_key
-.balena/secrets/integration_github_signature_key
-.balena/secrets/integration_github_token
-.balena/secrets/integration_front_token
-.balena/secrets/integration_intercom_token
-.balena/secrets/integration_discourse_token
-.balena/secrets/integration_discourse_username
-.balena/secrets/registry_token_auth_cert_key
-.balena/secrets/registry_token_auth_cert_kid
-.balena/secrets/aws_access_key_id
-.balena/secrets/aws_s3_bucket_name
-.balena/secrets/aws_secret_access_key
+# git secrets
+.balena/secrets/*
+!*.secret
