Test moving transformer contracts
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/package.json
+++ b/package.json
@@ -79,15 +79,15 @@
     "@balena/jellyfish-environment": "^10.0.0",
     "@balena/jellyfish-plugin-balena-api": "^2.0.109",
     "@balena/jellyfish-plugin-channels": "^2.0.92",
-    "@balena/jellyfish-plugin-default": "^24.0.79",
+    "@balena/jellyfish-plugin-default": "24.0.80-joshbwlng-test-worker-da670f60a3cb896f7a62cf86037d073c1ea6f5c7",
     "@balena/jellyfish-plugin-discourse": "^2.2.88",
     "@balena/jellyfish-plugin-flowdock": "^2.0.116",
     "@balena/jellyfish-plugin-front": "^2.0.142",
-    "@balena/jellyfish-plugin-github": "^2.2.34",
+    "@balena/jellyfish-plugin-github": "2.2.35-joshbwlng-test-worker-38fb4cbae2150652076253793a36a278290f8a49",
     "@balena/jellyfish-plugin-outreach": "^2.0.123",
-    "@balena/jellyfish-plugin-product-os": "^4.0.60",
+    "@balena/jellyfish-plugin-product-os": "5.0.0-joshbwlng-remove-transformers-51f9dc9d214a6fd58f8b293f3b063cd6f4dd9ba0",
     "@balena/jellyfish-plugin-typeform": "^5.1.42",
-    "@balena/jellyfish-worker": "^22.0.0",
+    "@balena/jellyfish-worker": "22.1.0-joshbwlng-transformer-contracts-1b140a9080937fe79db271bb360d7ecce85a767d",
     "@balena/lint": "^6.2.0",
     "@playwright/test": "^1.21.0",
     "autumndb": "^19.1.22",
