--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,17 +26,17 @@
     "@balena/jellyfish-environment": "^11.0.0",
     "@balena/jellyfish-logger": "^5.0.26",
     "@balena/jellyfish-metrics": "^2.0.71",
-    "@balena/jellyfish-plugin-balena-api": "^2.0.123",
-    "@balena/jellyfish-plugin-channels": "^2.0.99",
-    "@balena/jellyfish-plugin-default": "^24.0.91",
-    "@balena/jellyfish-plugin-discourse": "^2.2.103",
-    "@balena/jellyfish-plugin-flowdock": "^2.0.128",
-    "@balena/jellyfish-plugin-front": "^2.0.157",
-    "@balena/jellyfish-plugin-github": "^2.2.45",
-    "@balena/jellyfish-plugin-outreach": "^2.0.134",
-    "@balena/jellyfish-plugin-product-os": "^5.0.9",
-    "@balena/jellyfish-plugin-typeform": "^5.2.3",
-    "@balena/jellyfish-worker": "^22.1.13",
+    "@balena/jellyfish-plugin-balena-api": "^2.0.125",
+    "@balena/jellyfish-plugin-channels": "^2.0.101",
+    "@balena/jellyfish-plugin-default": "^24.0.93",
+    "@balena/jellyfish-plugin-discourse": "^2.2.104",
+    "@balena/jellyfish-plugin-flowdock": "^2.0.129",
+    "@balena/jellyfish-plugin-front": "^2.0.159",
+    "@balena/jellyfish-plugin-github": "^2.2.47",
+    "@balena/jellyfish-plugin-outreach": "^2.0.135",
+    "@balena/jellyfish-plugin-product-os": "^5.0.11",
+    "@balena/jellyfish-plugin-typeform": "^5.2.4",
+    "@balena/jellyfish-worker": "^23.0.0",
     "@balena/socket-prometheus-metrics": "^0.0.3",
     "autumndb": "^19.1.30",
     "aws-sdk": "^2.1125.0",
@@ -46,6 +46,7 @@
     "errio": "^1.2.2",
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
+    "is-uuid": "^1.0.2",
     "json-e": "^4.4.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -62,6 +63,7 @@
     "@balena/jellyfish-types": "^2.0.5",
     "@balena/lint": "^6.2.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/is-uuid": "^1.0.0",
     "@types/jest": "^27.4.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.21",
