--- a/.dockerignore
+++ b/.dockerignore
@@ -10,6 +10,6 @@ Dockerfile
 postgres_data
 **/node_modules
 **/package*.json.*
-.libs/*/package*.json
-.libs/*/*.tgz*
-.libs/*/lib
+.libs/**/package*.json
+.libs/**/*.tgz*
+.libs/**/lib
