--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -68,6 +68,7 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.14.0",
+    "react-force-graph-2d": "^1.23.10",
     "react-helmet": "^6.1.0",
     "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.8",
