Update repo.yml file
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/repo.yml
+++ b/repo.yml
@@ -1,29 +1,17 @@
-type: 'generic'
+type: 'docker'
 upstream:
   - repo: 'open-balena-base'
     url: 'https://github.com/balena-io/open-balena-base'
-  - repo: 'ci-task-runner'
-    url: 'https://github.com/product-os/ci-task-runner'
-  - repo: 'jellyfish-action-library'
-    url: 'https://github.com/product-os/jellyfish-action-library'
-  - repo: 'jellyfish-chat-widget'
-    url: 'https://github.com/product-os/jellyfish-chat-widget'
   - repo: 'jellyfish-client-sdk'
     url: 'https://github.com/product-os/jellyfish-client-sdk'
   - repo: 'jellyfish-core'
     url: 'https://github.com/product-os/jellyfish-core'
   - repo: 'jellyfish-environment'
     url: 'https://github.com/product-os/jellyfish-environment'
-  - repo: 'jellyfish-plugin-base'
-    url: 'https://github.com/product-os/jellyfish-plugin-base'
   - repo: 'jellyfish-plugin-default'
     url: 'https://github.com/product-os/jellyfish-plugin-default'
   - repo: 'jellyfish-plugin-product-os'
     url: 'https://github.com/product-os/jellyfish-plugin-product-os'
-  - repo: 'jellyfish-queue'
-    url: 'https://github.com/product-os/jellyfish-queue'
-  - repo: 'jellyfish-sync'
-    url: 'https://github.com/product-os/jellyfish-sync'
   - repo: 'jellyfish-worker'
     url: 'https://github.com/product-os/jellyfish-worker'
   - repo: 'jellyfish-assert'
@@ -32,5 +20,3 @@ upstream:
     url: 'https://github.com/product-os/jellyfish-logger'
   - repo: 'jellyfish-metrics'
     url: 'https://github.com/product-os/jellyfish-metrics'
-  - repo: 'jellyfish-ui-components'
-    url: 'https://github.com/product-os/jellyfish-ui-components'
