--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:catch": "catch-uncommitted --skip-node-versionbot-changes --exclude=VERSION,.versionbot/",
     "lint:server": "(cd apps/server && npm run lint)",
     "lint:ui": "(cd apps/ui && npm run lint)",
+    "test": "npm run lint && npm run test:unit",
     "test:unit": "npm run test:unit:ui",
     "test:unit:ui": "(cd apps/ui && npm run test:unit)",
     "test:e2e:sdk": "ava ./test/e2e/sdk/*.spec.js",
@@ -32,7 +33,6 @@
     "postinstall": "(cd apps/server && npm i); (cd apps/ui && npm i)",
     "compose:build": "docker-compose build",
     "compose:up": "docker-compose up",
-    "compose:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up",
     "compose:data": "docker-compose up postgres redis s3 haproxy",
     "push": "./scripts/push.sh",
     "push:lib": "./scripts/push-lib.js",
@@ -114,6 +114,7 @@
     "playwright": "^1.21.1",
     "request": "^2.88.2",
     "rimraf": "^3.0.2",
+    "shellcheck": "^1.1.0",
     "simple-git-hooks": "^2.7.0",
     "uuid": "^8.3.2"
   },
