--- a/apps/haproxy/haproxy.cfg
+++ b/apps/haproxy/haproxy.cfg
@@ -64,8 +64,9 @@ frontend http
 
 		acl api_dead nbsrv(api-backend) lt 1
 		acl ui_dead nbsrv(ui-backend) lt 1
+		acl hydra_dead nbsrv(hydra-backend) lt 1
 		monitor-uri /health
-		monitor fail if api_dead ui_dead
+		monitor fail if api_dead ui_dead hydra_dead
 
 		# requests to wifi-connect (Host: 192.168.42.1)
 		default_backend wifi-connect-backend
@@ -111,6 +112,9 @@ frontend http
 		acl host-minio-backend hdr_beg(host) -i "minio."
 		use_backend minio-backend if host-minio-backend
 
+		acl host-hydra-backend hdr_beg(host) -i "hydra."
+		use_backend hydra-backend if host-hydra-backend
+
 frontend https
 		bind :::443 v4v6 ssl crt "${CERT_CHAIN_PATH}" alpn h2,http/1.1
 		default_backend ui-backend
@@ -154,6 +158,9 @@ frontend https
 		acl host-minio-backend hdr_beg(host) -i "minio."
 		use_backend minio-backend if host-minio-backend
 
+		acl host-hydra-backend hdr_beg(host) -i "hydra."
+		use_backend hydra-backend if host-hydra-backend
+
 backend api-backend
 		server api api:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
 
@@ -191,3 +198,6 @@ backend ocsp-backend
 
 backend wifi-connect-backend
 		server wifi-connect 192.168.42.1:1337 check port 1337
+
+backend hydra-backend
+		server hydra hydra:4444 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 4444
