--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,27 +18,27 @@
     "test": "catch-uncommitted --skip-node-versionbot-changes && npm run lint && npm run test:integration",
     "doc": "typedoc lib/",
     "prepack": "npm run build",
-    "start": "node --abort-on-uncaught-exception --stack-trace-limit=100 build/index.js",
-    "dev": "NODE_ENV=development nodemon --inspect=0.0.0.0 ./lib/index.ts"
+    "start": "./run.sh"
   },
   "dependencies": {
     "@balena/jellyfish-assert": "^1.2.29",
-    "@balena/jellyfish-environment": "^11.0.3",
-    "@balena/jellyfish-logger": "^5.0.31",
-    "@balena/jellyfish-metrics": "^2.0.76",
-    "@balena/jellyfish-plugin-balena-api": "^3.0.0",
-    "@balena/jellyfish-plugin-channels": "^2.0.116",
-    "@balena/jellyfish-plugin-default": "^25.1.0",
-    "@balena/jellyfish-plugin-discourse": "^3.0.0",
-    "@balena/jellyfish-plugin-flowdock": "^3.0.0",
-    "@balena/jellyfish-plugin-front": "^3.0.0",
-    "@balena/jellyfish-plugin-github": "^3.0.5",
-    "@balena/jellyfish-plugin-outreach": "^3.0.0",
-    "@balena/jellyfish-plugin-product-os": "^5.0.24",
-    "@balena/jellyfish-plugin-typeform": "^6.1.0",
-    "@balena/jellyfish-worker": "^24.2.0",
+    "@balena/jellyfish-environment": "^12.0.3",
+    "@balena/jellyfish-logger": "^5.0.27",
+    "@balena/jellyfish-metrics": "^2.0.72",
+    "@balena/jellyfish-plugin-balena-api": "^5.0.1",
+    "@balena/jellyfish-plugin-channels": "^3.0.5",
+    "@balena/jellyfish-plugin-default": "^27.2.1",
+    "@balena/jellyfish-plugin-discourse": "^5.0.0",
+    "@balena/jellyfish-plugin-flowdock": "^5.0.1",
+    "@balena/jellyfish-plugin-front": "^5.0.0",
+    "@balena/jellyfish-plugin-github": "^5.0.0",
+    "@balena/jellyfish-plugin-oauth": "^0.2.0",
+    "@balena/jellyfish-plugin-outreach": "^4.1.6",
+    "@balena/jellyfish-plugin-product-os": "^7.0.4",
+    "@balena/jellyfish-plugin-typeform": "^8.0.1",
+    "@balena/jellyfish-worker": "^27.0.0",
     "@balena/socket-prometheus-metrics": "^0.0.3",
-    "autumndb": "^19.3.1",
+    "autumndb": "^20.0.2",
     "aws-sdk": "^2.1130.0",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
