--- a/package.json
+++ b/package.json
@@ -98,14 +98,14 @@
     "cli-spinner": "^0.2.10",
     "depcheck": "^1.4.3",
     "deplint": "^1.1.3",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.16.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^35.5.1",
+    "eslint-plugin-jsdoc": "^39.3.2",
     "eslint-plugin-lodash": "^7.4.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.0",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^12.4.2",
     "lodash": "^4.17.21",
