--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "postinstall": "(cd apps/server && npm i); (cd apps/ui && npm i)",
     "compose:build": "docker-compose build",
     "compose:up": "docker-compose up",
-    "compose:data": "docker-compose up postgres redis s3 haproxy",
+    "compose:local": "docker-compose -f docker-compose.local.yml up",
     "push": "./scripts/push.sh",
     "push:lib": "./scripts/push-lib.js",
     "build:server": "(cd apps/server && npm run build)",
