Perform oauth with info from contracts
When performing oauth flow against a provider (eg. login with balena), we used to get information from integration code. This information should be stored inside oauth-provider-contracts.

Change-type: major

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       - certs-data:/certs
     environment:
       <<: *default-environment
-      HOSTS_CONFIG: ','
+      HOSTS_CONFIG: 'LIVECHAT_HOST:livechat'
       LOGLEVEL: crit
       NO_LOG_SUCCESS: 1
       NODE_ENV: test
