--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -43,6 +43,7 @@
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "errio": "^1.2.2",
     "express": "^4.18.1",
     "express-basic-auth": "^1.2.1",
