--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -32,6 +32,7 @@
     "bluebird": "^3.7.2",
     "classnames": "^2.3.1",
     "color-hash": "^2.0.1",
+    "color-invert": "^0.0.3",
     "common-tags": "^1.8.2",
     "connected-react-router": "^6.9.2",
     "copy-to-clipboard": "^3.3.1",
