Expose scrape targets
Change-type: patch

--- a/apps/haproxy/haproxy.cfg
+++ b/apps/haproxy/haproxy.cfg
@@ -46,6 +46,14 @@ listen haproxy-stats
 		stats enable
 		stats uri /metrics
 
+listen api-metrics
+		bind :::9000 v4v6
+		server api-metrics api:9000 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9000
+
+listen socket-io-metrics
+		bind :::9001 v4v6
+		server socket-io-metrics api:9001 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9001
+
 listen postgres
 		mode tcp
 		bind :::5432 v4v6
@@ -55,7 +63,6 @@ listen redis
 		mode tcp
 		bind :::6379 v4v6
 		server redis redis:6379 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 6379
-
 
 frontend http
 		bind :::80 v4v6
@@ -161,11 +168,11 @@ backend api-backend
 		server api api:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
 
 backend metrics-api-backend
-		server api api:9000 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9000
+		server api-metrics api:9000 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9000
 
-# (TBC) wire up using different hostname or metrics path
+# (TBC) wire up using different hostname or metrics path or poll directly
 backend metrics-socket-backend
-		server api api:9001 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9001
+		server socket-io-metrics api:9001 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 9001
 
 backend ui-backend
 		server ui ui:80 resolvers docker-bridge-resolver resolve-prefer ipv4 check port 80
