UI: Cache png files served via nginx
Change-type: patch

--- a/apps/ui/conf/nginx.conf
+++ b/apps/ui/conf/nginx.conf
@@ -27,7 +27,7 @@ server {
 		add_header Cache-Control "no-store, no-cache, must-revalidate";
 	}
 
-	location ~\.(js|css|svg)$ {
+	location ~\.(js|css|svg|png)$ {
 		root /usr/share/nginx/html;
 
 		 expires 1y;
