Cleanup Prometheus/Grafana config
* move dashboard(s) to product-os/environment-production
* interpolate environment variables in prometheus.yml

Change-type: patch

--- a/apps/grafana/Dockerfile
+++ b/apps/grafana/Dockerfile
@@ -3,12 +3,10 @@ FROM grafana/grafana:8.5.4
 
 USER root
 
-RUN mkdir -p /etc/grafana/dashboards
+RUN mkdir -p /etc/grafana/dashboards/standard
 COPY grafana.ini /etc/grafana/
 COPY provisioning/dashboards/standard.yml /etc/grafana/provisioning/dashboards/
 COPY provisioning/datasources/prometheus.yml /etc/grafana/provisioning/datasources/
-COPY standard/logs.json /etc/grafana/dashboards/standard/
-COPY standard/metrics.json /etc/grafana/dashboards/standard/
 
 RUN chown -R grafana /etc/grafana
 
