Add basic benchmarking, update db import script
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/workflows/balena.yml
+++ b/.github/workflows/balena.yml
@@ -31,7 +31,8 @@ env:
     e2e e2e-ui \
     export-database \
     import-database \
-    e2e-server-previous-dump
+    e2e-server-previous-dump \
+    benchmark
 
   LIVECHAT_PORT: 443
   LOGLEVEL: warning
