--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,11 +3,8 @@ networks:
   internal: {}
 services:
   postgres:
-    image: postgres:14
+    image: balena/open-balena-db:v5.1.0
     restart: unless-stopped
-    environment:
-      POSTGRES_PASSWORD: docker
-      POSTGRES_USER: docker
     networks:
       - internal
     ports:
@@ -15,7 +12,7 @@ services:
     healthcheck:
       interval: 15s
       retries: 3
-      test: ['CMD-SHELL', 'pg_isready -U docker']
+      test: pg_isready -U "${POSTGRES_USER}" -d postgres
       timeout: 5s
     command: ['postgres', '-c', 'fsync=off', '-c', 'synchronous_commit=off', '-c', 'full_page_writes=off']
   redis:
