--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,7 +122,7 @@ services:
 
   # https://github.com/balena-io/open-balena-db
   postgres:
-    image: postgres:14
+    image: balena/open-balena-db:v5.1.0
     restart: unless-stopped
     healthcheck:
       interval: 15s
