--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -12,7 +12,7 @@ services:
     healthcheck:
       interval: 15s
       retries: 3
-      test: pg_isready -U "${POSTGRES_USER}" -d postgres
+      test: pg_isready -U docker -d postgres
       timeout: 5s
     command: ['postgres', '-c', 'fsync=off', '-c', 'synchronous_commit=off', '-c', 'full_page_writes=off']
   redis:
