--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -103,7 +103,7 @@
     "@types/flat": "^5.0.2",
     "@types/howler": "^2.2.7",
     "@types/is-uuid": "^1.0.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^28.1.2",
     "@types/pluralize": "^0.0.29",
     "@types/react-csv": "^1.1.2",
     "@types/react-dom": "^17.0.17",
@@ -121,14 +121,15 @@
     "eslint": "^8.18.0",
     "grommet": "^2.24.0",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "jest-esm-transformer": "^1.0.0",
     "json-schema": "^0.4.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "redux-mock-store": "^1.5.4",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.0",
-    "ts-jest": "^27.1.5",
+    "ts-jest": "^28.0.5",
     "typedoc": "^0.22.17",
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
