Renovate: Ignore redis updates
Manually update redis image to keep the same version as production.

Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,6 +2,10 @@
   "extends": [
     "github>product-os/renovate-config"
   ],
+  "ignoreDeps": [
+    "node",
+    "redis"
+  ],
   "packageRules": [
     {
       "groupName": "non-major-frontend",
