Drop @balena/jellyfish-config
Change-type: patch
Signed-off-by: Josh Bowling <josh@balena.io>

--- a/apps/server/tsconfig.build.json
+++ b/apps/server/tsconfig.build.json
@@ -1,6 +1,10 @@
 {
-  "extends": "@balena/jellyfish-config/config/tsconfig.build.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "declaration": false,
-  }
+    "declaration": false
+  },
+  "exclude": [
+    "lib/**/*.spec.ts",
+    "test/**/*.ts"
+  ]
 }
