--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -1,12 +1,32 @@
 {
-  "extends": "@balena/jellyfish-config/config/tsconfig.json",
+  "extends": "@balena/lint/tsconfig.json",
   "compilerOptions": {
     "target": "es2016",
+    "noImplicitAny": false,
+    "allowJs": false,
+    "outDir": "../../../../build",
+    "esModuleInterop": true,
+    "removeComments": false,
+    "resolveJsonModule": true,
+    "strict": true,
+    "declaration": true,
+    "skipLibCheck": true,
     "noUnusedParameters": false,
     "noUnusedLocals": false,
     "jsx": "react"
   },
   "typedocOptions": {
+    "excludePrivate": true,
+    "excludeProtected": true,
+    "excludeExternals": true,
+    "gitRevision": "master",
     "out": "../../docs/typedoc/ui"
-  }
+  },
+  "include": [
+    "lib/**/*.ts",
+    "lib/**/*.tsx",
+    "test/**/*.ts",
+    "test/**/*.tsx",
+    "@types/**/*.d.ts"
+  ]
 }
