--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,9 +1,27 @@
 {
-  "extends": "@balena/jellyfish-config/config/tsconfig.json",
+  "extends": "@balena/lint/tsconfig.json",
   "compilerOptions": {
+    "target": "es2020",
+    "noImplicitAny": false,
+    "allowJs": false,
+    "outDir": "build",
+    "esModuleInterop": true,
+    "removeComments": false,
+    "resolveJsonModule": true,
+    "strict": true,
+    "declaration": true,
+    "skipLibCheck": true,
     "types": ["jest"]
   },
   "typedocOptions": {
+    "excludePrivate": true,
+    "excludeProtected": true,
+    "excludeExternals": true,
+    "gitRevision": "master",
     "out": "../../docs/typedoc/server"
-  }
+  },
+  "include": [
+    "lib/**/*.ts",
+    "test/**/*.ts"
+  ]
 }
