--- a/apps/ui/tsconfig.build.json
+++ b/apps/ui/tsconfig.build.json
@@ -1,3 +1,9 @@
 {
-  "extends": "@balena/jellyfish-config/config/tsconfig.build.json"
+  "extends": "./tsconfig.json",
+  "exclude": [
+    "lib/**/*.spec.ts",
+    "lib/**/*.spec.tsx",
+    "test/**/*.ts",
+    "test/**/*.tsx"
+  ]
 }
