--- a/apps/sut/Dockerfile.template
+++ b/apps/sut/Dockerfile.template
@@ -2,6 +2,15 @@
 # https://registry.hub.docker.com/r/resinci/jellyfish-test
 FROM resinci/jellyfish-test:v4.0.1 AS base
 
+WORKDIR /usr/src/jellyfish
+
+COPY ./apps/sut/package.json /usr/src/jellyfish/package.json
+COPY ./apps/sut/package-lock.json /usr/src/jellyfish/package-lock.json
+RUN npm ci
+
+COPY ./apps/sut/test/ /usr/src/jellyfish/test
+
+
 # --- run unit tests
 FROM base AS test
 
@@ -9,8 +18,6 @@ ARG CI=1
 ARG SUT=1
 
 WORKDIR /usr/src/jellyfish
-
-COPY . ./
 
 # --- Local Mode livepush
 #dev-copy=. ./
@@ -20,7 +27,7 @@ COPY . ./
 
 SHELL [ "/bin/bash", "-c" ]
 
-RUN [[ $SUT -eq 1 ]] && npm ci && task lint unit
+RUN [[ $SUT -eq 1 ]] && task lint unit
 
 
 # --- tests runtime
@@ -31,5 +38,3 @@ ENV CI 1
 WORKDIR /usr/src/jellyfish
 
 RUN systemctl enable confd
-
-COPY . ./
