--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   jellyfish-tests:
     build:
       context: .
-      dockerfile: Dockerfile.template
+      dockerfile: apps/sut/Dockerfile.template
     # (TBC) https://www.flowdock.com/app/rulemotion/r-beginners/threads/uPPfzU-DGRehSDk-TkS-vZs7Q58
     # https://github.com/balena-io-modules/open-balena-base/blob/master/Dockerfile#L105
     command: /usr/bin/entry.sh
